{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 110,
  "lineage": "83358483-684c-8c5c-a70c-c0b759787399",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "VMbase",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0eaf04122a1ae7b3b",
            "arn": "arn:aws:ec2:ap-southeast-1:097854000435:instance/i-06f295f85ea8b396d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06f295f85ea8b396d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dzung_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04d63bf004e554b7f",
            "private_dns": "ip-172-31-3-11.ap-southeast-1.compute.internal",
            "private_ip": "172.31.3.11",
            "public_dns": "ec2-52-221-250-114.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.221.250.114",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09a94132093ae3d8b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03972201fc51102a8",
            "tags": {
              "Environment": "dev",
              "Name": "VMbase",
              "Role": "frontend",
              "Stack": "VMbase"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "VMbase",
              "Role": "frontend",
              "Stack": "VMbase"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-010f2e473ec6a1b84"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_security_group.ec2_secgroup",
            "aws_subnet.ap-southeast-1a",
            "aws_subnet.ap-southeast-1b",
            "aws_subnet.ap-southeast-1c",
            "aws_vpc.my-vpc-01",
            "data.aws_ami.ubuntu"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:097854000435:internet-gateway/igw-073de9eedb4582ac5",
            "id": "igw-073de9eedb4582ac5",
            "owner_id": "097854000435",
            "tags": {
              "Name": "Gateway"
            },
            "tags_all": {
              "Name": "Gateway"
            },
            "vpc_id": "vpc-0b48c41e0e02a491b"
          },
          "dependencies": [
            "aws_vpc.my-vpc-01"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "VMbase",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:097854000435:loadbalancer/app/alb-VMbase/ae556256610ee034",
            "arn_suffix": "app/alb-VMbase/ae556256610ee034",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-VMbase-1734095367.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:097854000435:loadbalancer/app/alb-VMbase/ae556256610ee034",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-VMbase",
            "security_groups": [
              "sg-064fb7eafb6bfaf5d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0395f10e7ad2cdd5d"
              },
              {
                "subnet_id": "subnet-03972201fc51102a8"
              },
              {
                "subnet_id": "subnet-0a18643ccb6555c03"
              }
            ],
            "subnets": [
              "subnet-0395f10e7ad2cdd5d",
              "subnet-03972201fc51102a8",
              "subnet-0a18643ccb6555c03"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "ALB-VMbase"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ALB-VMbase"
            },
            "vpc_id": "vpc-0b48c41e0e02a491b",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.alb_secgroup",
            "aws_subnet.ap-southeast-1a",
            "aws_subnet.ap-southeast-1b",
            "aws_subnet.ap-southeast-1c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "VMbase",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:097854000435:listener/app/alb-VMbase/ae556256610ee034/356b295f466b4531",
            "certificate_arn": "arn:aws:acm:ap-southeast-1:097854000435:certificate/1aed4da5-4014-4583-be02-0a27a64fe89f",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:097854000435:targetgroup/dev-demo-VMbase/dcc228f048dfdf11",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:097854000435:listener/app/alb-VMbase/ae556256610ee034/356b295f466b4531",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:097854000435:loadbalancer/app/alb-VMbase/ae556256610ee034",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.VMbase",
            "aws_lb_target_group.VMbase",
            "aws_security_group.alb_secgroup",
            "aws_subnet.ap-southeast-1a",
            "aws_subnet.ap-southeast-1b",
            "aws_subnet.ap-southeast-1c",
            "aws_vpc.my-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "redirect_http_to_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:097854000435:listener/app/alb-VMbase/ae556256610ee034/81a9d838b90d8d12",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:097854000435:listener/app/alb-VMbase/ae556256610ee034/81a9d838b90d8d12",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:097854000435:loadbalancer/app/alb-VMbase/ae556256610ee034",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.VMbase",
            "aws_security_group.alb_secgroup",
            "aws_subnet.ap-southeast-1a",
            "aws_subnet.ap-southeast-1b",
            "aws_subnet.ap-southeast-1c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "VMbase",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:097854000435:targetgroup/dev-demo-VMbase/dcc228f048dfdf11",
            "arn_suffix": "targetgroup/dev-demo-VMbase/dcc228f048dfdf11",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:097854000435:targetgroup/dev-demo-VMbase/dcc228f048dfdf11",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "dev-demo-VMbase",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b48c41e0e02a491b"
          },
          "dependencies": [
            "aws_vpc.my-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "VMbase",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:097854000435:targetgroup/dev-demo-VMbase/dcc228f048dfdf11-20220721142309857600000001",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:097854000435:targetgroup/dev-demo-VMbase/dcc228f048dfdf11",
            "target_id": "i-06f295f85ea8b396d"
          },
          "dependencies": [
            "aws_instance.VMbase",
            "aws_internet_gateway.gw",
            "aws_lb_target_group.VMbase",
            "aws_security_group.ec2_secgroup",
            "aws_subnet.ap-southeast-1a",
            "aws_subnet.ap-southeast-1b",
            "aws_subnet.ap-southeast-1c",
            "aws_vpc.my-vpc-01",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:097854000435:route-table/rtb-00124cbe786afaae5",
            "id": "rtb-00124cbe786afaae5",
            "owner_id": "097854000435",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-073de9eedb4582ac5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtb-vpc01"
            },
            "tags_all": {
              "Name": "rtb-vpc01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b48c41e0e02a491b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.my-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0650413b774a78898",
            "route_table_id": "rtb-00124cbe786afaae5",
            "subnet_id": "subnet-03972201fc51102a8"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rtb",
            "aws_subnet.ap-southeast-1a",
            "aws_vpc.my-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07989fabc3f47e1da",
            "route_table_id": "rtb-00124cbe786afaae5",
            "subnet_id": "subnet-0395f10e7ad2cdd5d"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rtb",
            "aws_subnet.ap-southeast-1b",
            "aws_vpc.my-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ec3b356d3dc62ab",
            "route_table_id": "rtb-00124cbe786afaae5",
            "subnet_id": "subnet-0a18643ccb6555c03"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rtb",
            "aws_subnet.ap-southeast-1c",
            "aws_vpc.my-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_secgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:097854000435:security-group/sg-064fb7eafb6bfaf5d",
            "description": "Allow access HTTP and HTTPS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-064fb7eafb6bfaf5d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all IP access HTTP",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all IP access HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb_secgroup",
            "name_prefix": "",
            "owner_id": "097854000435",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb_secgroup"
            },
            "tags_all": {
              "Name": "alb_secgroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b48c41e0e02a491b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-vpc-01"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_secgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:097854000435:security-group/sg-010f2e473ec6a1b84",
            "description": "Allow SSH and ALB secgroup",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-010f2e473ec6a1b84",
            "ingress": [
              {
                "cidr_blocks": [
                  "42.114.237.198/32"
                ],
                "description": "Allow SSH from only my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow traffic only from ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-064fb7eafb6bfaf5d"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "ec2_secgroup",
            "name_prefix": "",
            "owner_id": "097854000435",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2_secgroup"
            },
            "tags_all": {
              "Name": "ec2_secgroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b48c41e0e02a491b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_secgroup",
            "aws_vpc.my-vpc-01"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ap-southeast-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:097854000435:subnet/subnet-03972201fc51102a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "172.31.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03972201fc51102a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "097854000435",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-subnet-1a-vpc-01"
            },
            "tags_all": {
              "Name": "my-subnet-1a-vpc-01"
            },
            "vpc_id": "vpc-0b48c41e0e02a491b"
          },
          "dependencies": [
            "aws_vpc.my-vpc-01"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ap-southeast-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:097854000435:subnet/subnet-0395f10e7ad2cdd5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0395f10e7ad2cdd5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "097854000435",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-subnet-1b-vpc-01"
            },
            "tags_all": {
              "Name": "my-subnet-1b-vpc-01"
            },
            "vpc_id": "vpc-0b48c41e0e02a491b"
          },
          "dependencies": [
            "aws_vpc.my-vpc-01"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ap-southeast-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:097854000435:subnet/subnet-0a18643ccb6555c03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a18643ccb6555c03",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "097854000435",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-subnet-1c-vpc-01"
            },
            "tags_all": {
              "Name": "my-subnet-1c-vpc-01"
            },
            "vpc_id": "vpc-0b48c41e0e02a491b"
          },
          "dependencies": [
            "aws_vpc.my-vpc-01"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:097854000435:vpc/vpc-0b48c41e0e02a491b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-00b5c750bcabe63e3",
            "default_route_table_id": "rtb-097e485a9bca0e63c",
            "default_security_group_id": "sg-0498f0e63b1fdd755",
            "dhcp_options_id": "dopt-0adfefa2c38d90e2b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b48c41e0e02a491b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-097e485a9bca0e63c",
            "owner_id": "097854000435",
            "tags": {
              "Name": "my-vpc-01"
            },
            "tags_all": {
              "Name": "my-vpc-01"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}